compiler/snapshots/parse_complex_input_function_expression.snap
---
source: compiler/src/syntax/mod.rs
description: (X y) -> z
expression: result
---
FunctionExpressionNode {
    inputs: [
        ConstructorPatternNode {
            constructor: "X",
            elements: [
                VariablePatternNode {
                    variable: "y",
                },
            ],
        },
    ],
    output: VariableExpressionNode {
        variable: "z",
    },
}
