compiler/snapshots/parse_complex_named_type.snap
---
source: compiler/src/syntax/mod.rs
description: Maybe Number
expression: result
---
NamedTypeNode {
    name: "Maybe",
    parameters: [
        NamedTypeNode {
            name: "Number",
            parameters: [],
        },
    ],
}
