compiler/snapshots/parse_default_constraint.snap
---
source: compiler/src/syntax/mod.rs
description: "(value :: Number)"
expression: result
---
DefaultConstraintNode {
    parameter: TypeParameterNode {
        name: "value",
        infer: false,
        value: None,
    },
    value: NamedTypeNode {
        name: "Number",
        parameters: [],
    },
}
