compiler/snapshots/parse_empty_block_expression.snap
---
source: compiler/src/syntax/mod.rs
description: "{}"
expression: result
---
BlockExpressionNode {
    statements: [],
}
