compiler/snapshots/parse_named_attribute.snap
---
source: compiler/src/syntax/mod.rs
description: "[foo]"
expression: result
---
AttributeNode {
    name: "foo",
    value: None,
}
