compiler/snapshots/parse_number_expression.snap
---
source: compiler/src/syntax/mod.rs
description: "3.14"
expression: result
---
NumberExpressionNode {
    value: "3.14",
}
