compiler/snapshots/parse_set_pattern.snap
---
source: compiler/src/syntax/mod.rs
description: set x
expression: result
---
SetPatternNode {
    variable: "x",
}
